fix calendar center alignment

--- a/static/css/calendar.sass
+++ b/static/css/calendar.sass
@@ -9,4 +9,4 @@
   border: none
 
 #chart
-  margin-left: 5px
+  margin-left: 3px
